# Kusovaya-BookShop

./: Book.h  CMakeLists.txt  Employee.cpp  Employee.h  Sell.h  Validating.cpp  Validating.h  auth_form.cpp  auth_form.h  auth_form.ui  book_form.cpp  book_form.h  book_form.ui  database.cpp  database.h  empl_form.cpp  empl_form.h  empl_form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sell_form.cpp  sell_form.h  sell_form.ui  settings_form.cpp  settings_form.h  settings_form.ui  statistics_form.cpp  statistics_form.h  statistics_form.ui
